--- a/helm-chart/binderhub/templates/secret.yaml
+++ b/helm-chart/binderhub/templates/secret.yaml
@@ -1,3 +1,9 @@
+{{- /*
+  Note that changes to the rendered version of this
+  file will trigger a restart of the BinderHub pod
+  through a annotation containing a hash of this
+  file rendered.
+*/ -}}
 kind: Secret
 apiVersion: v1
 metadata:
@@ -7,9 +13,13 @@ stringData:
   {{- /* Make it easy to mount certain parts without traversing YAML */}}
   binder.hub-token: {{ .Values.jupyterhub.hub.services.binder.apiToken | quote }}
 
-  {{- /* Stash away all Helm template values */}}
+  {{- /*
+    Stash away relevant Helm template values for
+    the BinderHub Python application to read from
+    in binderhub_config.py.
+  */}}
   values.yaml: |
-    {{- .Values | toYaml | nindent 4 }}
+    {{- pick .Values "config" "cors" "dind" "extraConfig" | toYaml | nindent 4 }}
 
   {{- /* Glob files to allow them to be mounted by the binderhub pod */}}
   {{- /* key=filename: value=content */}}
